# wgpu

wgpu-core/src/command/: render.rs
wgpu-hal/: Cargo.toml
wgpu-hal/src/: lib.rs
wgpu-hal/src/dx12/: adapter.rs  command.rs  conv.rs  descriptor.rs  device.rs  instance.rs  mod.rs  view.rs
wgpu-hal/src/vulkan/: instance.rs
