[package]
name = "wgpu-hal"
version = "0.11.2"
authors = ["wgpu developers"]
edition = "2018"
description = "WebGPU hardware abstraction layer"
homepage = "https://github.com/gfx-rs/wgpu"
repository = "https://github.com/gfx-rs/wgpu"
keywords = ["graphics"]
license = "MIT OR Apache-2.0"

[lib]

[features]
default = []
metal = ["naga/msl-out", "block", "foreign-types"]
vulkan = ["naga/spv-out", "ash", "gpu-alloc", "gpu-descriptor", "libloading", "inplace_it"]
gles = ["naga/glsl-out", "glow", "egl", "libloading"]
dx12 = ["naga/hlsl-out", "native", "bit-set", "range-alloc", "windows/Win32_Foundation",
    "windows/Win32_Graphics_Direct3D11",
    "windows/Win32_Graphics_Direct3D12",
    "windows/Win32_Graphics_Dxgi",
    "windows/Win32_Graphics_Gdi",
    "windows/Win32_Graphics_Hlsl",
    "windows/Win32_Security",
    "windows/Win32_System_LibraryLoader",
    "windows/Win32_System_Ole_Automation",
    "windows/Win32_System_SystemServices",
    "windows/Win32_System_Threading",
    "windows/Win32_System_WindowsProgramming",
    "windows/Win32_UI_WindowsAndMessaging",]
renderdoc = ["libloading", "renderdoc-sys"]

[dependencies]
bitflags = "1.0"
parking_lot = "0.11"
profiling = { version = "1", default-features = false }
raw-window-handle = "0.3"
thiserror = "1"

# backends common
arrayvec = "0.7"
fxhash = "0.2.1"
log = "0.4"
renderdoc-sys = { version = "0.7.1", optional = true }

# backend: Metal
block = { version = "0.1", optional = true }
foreign-types = { version = "0.3", optional = true }

# backend: Vulkan
ash = { version = "0.33", optional = true }
gpu-alloc = { version = "0.5", optional = true }
gpu-descriptor = { version = "0.2", optional = true }
inplace_it = { version ="0.3.3", optional = true }

# backend: Gles
glow = { version = "0.11", optional = true }

# backend: Dx12
bit-set = { version = "0.5", optional = true }
range-alloc = { version = "0.1", optional = true }

[dependencies.wgt]
package = "wgpu-types"
path = "../wgpu-types"
version = "0.11"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egl = { package = "khronos-egl", version = "4.1", features = ["dynamic"], optional = true }
#Note: it's only unused on Apple platforms
libloading = { version = "0.7", optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.25", features = ["Win32_Foundation",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Hlsl",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Ole_Automation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_UI_WindowsAndMessaging",] }
native = { package = "d3d12", git = "https://github.com/hwoodiwiss/d3d12-rs", branch = "switch-to-windows-rs", features = ["libloading"], optional = true }

[target.'cfg(any(target_os="macos", target_os="ios"))'.dependencies]
mtl = { package = "metal", version = "0.23.1" }
objc = "0.2.5"
core-graphics-types = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
web-sys = { version = "0.3", features = ["Window", "HtmlCanvasElement", "WebGl2RenderingContext"] }
js-sys = { version = "0.3" }

[dependencies.naga]
git = "https://github.com/gfx-rs/naga"
rev = "323999f"
#version = "0.7"

[dev-dependencies.naga]
git = "https://github.com/gfx-rs/naga"
rev = "323999f"
#version = "0.7"
features = ["wgsl-in"]

[dev-dependencies]
env_logger = "0.8"
winit = "0.25"
